--- a/locale/en/ritnlog.cfg
+++ b/locale/en/ritnlog.cfg
@@ -1,4 +1,7 @@
 [mod-setting-name]
+ritnmods-log-enable-log-print=Enable only logs in print():
+ritnmods-log-enable-log-log=Enable only logs in log():
+ritnmods-log-disable-log=Disable all logs :
 ritnmods-log-player-all-option=Activate all player events:
 ritnmods-log-player-position-option=Activate the positioning event player:
 ritnmods-log-player-cursor-option=Activate the cursor event player:
