--- a/locale/fr/ritnlog.cfg
+++ b/locale/fr/ritnlog.cfg
@@ -1,4 +1,7 @@
 [mod-setting-name]
+ritnmods-log-enable-log-print=Activer seulement les log en print() :
+ritnmods-log-enable-log-log=Activer seulement les log en log() :
+ritnmods-log-disable-log=Désactiver tous les logs :
 ritnmods-log-player-all-option=Activer tous les events player :
 ritnmods-log-player-position-option=Activer l'event player de positionnement :
 ritnmods-log-player-cursor-option=Activer l'event player du curseur :
