--- a/locale/en/ritnlog.cfg
+++ b/locale/en/ritnlog.cfg
@@ -1,10 +1,12 @@
 [mod-setting-name]
-ritnmods-log-enable-log-print=Enable only logs in print():
-ritnmods-log-enable-log-log=Enable only logs in log():
+ritnmods-log-enable-log-print=Enable only logs in print() :
+ritnmods-log-enable-log-log=Enable only logs in log() :
 ritnmods-log-disable-log=Disable all logs :
-ritnmods-log-player-all-option=Activate all player events:
-ritnmods-log-player-position-option=Activate the positioning event player:
-ritnmods-log-player-cursor-option=Activate the cursor event player:
+ritnmods-log-player-all-option=Activate all player events :
+ritnmods-log-option-player-advanced=Advanced options on_player events :
+ritnmods-log-player-position-option=Activate the positioning event player :
+ritnmods-log-player-cursor-option=Activate the cursor event player :
+ritnmods-log-option-player-admin=Activate useful events for a server administrator :
 
 [mod-setting-description]
 ritnmods-log-player-all-option=Activation of all other events starting with: "on_player _..."
