--- a/locale/fr/ritnlog.cfg
+++ b/locale/fr/ritnlog.cfg
@@ -3,8 +3,10 @@ ritnmods-log-enable-log-print=Activer seulement les log en print() :
 ritnmods-log-enable-log-log=Activer seulement les log en log() :
 ritnmods-log-disable-log=Désactiver tous les logs :
 ritnmods-log-player-all-option=Activer tous les events player :
+ritnmods-log-option-player-advanced=Options avancées sur les events on_player :
 ritnmods-log-player-position-option=Activer l'event player de positionnement :
 ritnmods-log-player-cursor-option=Activer l'event player du curseur :
+ritnmods-log-option-player-admin=Activer les events utiles pour un administrateur de serveur :
 
 [mod-setting-description]
 ritnmods-log-player-all-option=Activation de tous les autres events commençant par : "on_player_..."
