--- a/locale/en/ritnlog.cfg
+++ b/locale/en/ritnlog.cfg
@@ -7,8 +7,10 @@ ritnmods-log-option-player-advanced=Advanced options on_player events :
 ritnmods-log-player-position-option=Activate the positioning event player :
 ritnmods-log-player-cursor-option=Activate the cursor event player :
 ritnmods-log-option-player-admin=Activate useful events for a server administrator :
+ritnmods-log-advanced-position=Position is not rounded for : "on_player_changed_position"
 
 [mod-setting-description]
 ritnmods-log-player-all-option=Activation of all other events starting with: "on_player _..."
-ritnmods-log-player-position-option=Activation of the event: "on_player_changed_position"
-ritnmods-log-player-cursor-option=Activation of the event: "on_player_cursor_stack_changed"
+ritnmods-log-player-position-option=Activation of the event : "on_player_changed_position"
+ritnmods-log-player-cursor-option=Activation of the event : "on_player_cursor_stack_changed"
+ritnmods-log-advanced-position=Position is not rounded for : "on_player_changed_position"
