--- a/locale/fr/ritnlog.cfg
+++ b/locale/fr/ritnlog.cfg
@@ -7,8 +7,10 @@ ritnmods-log-option-player-advanced=Options avancées sur les events on_player :
 ritnmods-log-player-position-option=Activer l'event player de positionnement :
 ritnmods-log-player-cursor-option=Activer l'event player du curseur :
 ritnmods-log-option-player-admin=Activer les events utiles pour un administrateur de serveur :
+ritnmods-log-advanced-position=La position n'est pas arrondie pour : "on_player_changed_position"
 
 [mod-setting-description]
 ritnmods-log-player-all-option=Activation de tous les autres events commençant par : "on_player_..."
 ritnmods-log-player-position-option=Activation de l'event : "on_player_changed_position"
 ritnmods-log-player-cursor-option=Activation de l'event : "on_player_cursor_stack_changed"
+ritnmods-log-advanced-position=La position n'est pas arrondie pour : "on_player_changed_position"
