--- a/locale/fr/ritnlog.cfg
+++ b/locale/fr/ritnlog.cfg
@@ -8,6 +8,8 @@ ritnmods-log-player-position-option=Activer l'event player de positionnement :
 ritnmods-log-player-cursor-option=Activer l'event player du curseur :
 ritnmods-log-option-player-admin=Activer les events utiles pour un administrateur de serveur :
 ritnmods-log-advanced-position=La position n'est pas arrondie pour : "on_player_changed_position"
+ritnmods-log-on_game_created_from_scenario=Activer le log pour l'event : on_game_created_from_scenario
+ritnmods-log-on_cutscene_cancelled=Activer le log pour l'event : on_cutscene_cancelled
 
 [mod-setting-description]
 ritnmods-log-player-all-option=Activation de tous les autres events commençant par : "on_player_..."
