--- a/locale/en/ritnlog.cfg
+++ b/locale/en/ritnlog.cfg
@@ -8,6 +8,8 @@ ritnmods-log-player-position-option=Activate the positioning event player :
 ritnmods-log-player-cursor-option=Activate the cursor event player :
 ritnmods-log-option-player-admin=Activate useful events for a server administrator :
 ritnmods-log-advanced-position=Position is not rounded for : "on_player_changed_position"
+ritnmods-log-on_game_created_from_scenario=Activate log for event : on_game_created_from_scenario
+ritnmods-log-on_cutscene_cancelled=Activate log for event : on_cutscene_cancelled
 
 [mod-setting-description]
 ritnmods-log-player-all-option=Activation of all other events starting with: "on_player _..."
